[package]
name = "tinymd"
version = "0.1.0"
authors = ["MaxKonovalov38 <max.kon.38r@gmail.com>"]
edition = "2018"
description = "A tiny markdown compiler based on Jesse's tutorials."
homepage = "https://maxkonovalov38.github.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
